syntax = "proto3";

package user;
option java_multiple_files=true;
option java_package = "com.service.user";
option java_outer_classname = "UserProtobuf";

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);

  rpc GetUsersById(GetUsersByIdRequest) returns (UsersPublicResponse);
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
  string password = 5;
  string created_at = 6;
  ProfileResponse profile = 7;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUsersByIdRequest {
  repeated string ids = 1;
}

message UsersPublicResponse {
  repeated UserPublicResponse users = 1;
}

message UserPublicResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
  string created_at = 5;
  ProfileResponse profile = 6;
}

message ProfileResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string gender = 4;
  string dob = 5;
}

